style.css
:root {
    --clr-black-body: #343434;
    --clr-black-header: #232323;
    --clr-pry-green: #00DEA5;
    --clr-sec-orange: #FF8F2A;
    --clr-tertiary-orange: #F65024;
    --clr-white: #ffffff;

    /* Font Family */
    --ff-pry-header: 'Fredoka One', cursive;
    --ff-sec-body: 'Nunito Sans', sans-serif;
    --ff-tertiary-subhead: 'Quicksand', sans-serif;
    --font-family: 'Nunito', sans-serif;
    /* Unused */

    /* Font size desktop */
    --fs-hero-header: 80px;
    --fs-bd-header: 50px;
    --fs-subheader: 30px;
    --fs-title: 20px;
    --fs-body: 18px;

    /* Border Radius */
    --bdr-radius: 15px;

    --breakpoint-xs: 0;
    --breakpoint-sm: 576px;
    --breakpoint-md: 768px;
    --breakpoint-lg: 992px;
    --breakpoint-xl: 1200px;

    /* MOBILE */
    --fs-m-hero-header: 40px;
    --fs-m-bd-header: 30px;
    --fs-m-subheader: 22px;
    --fs-m-title: 20px;
    --fs-m-body: 18px;
}

/* =====RESET START=====  */
* {
    margin: 0;
    padding: 0;
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

html:focus-within {
    scroll-behavior: smooth;
}

html,
body {
    height: 100%;
    -webkit-text-size-adjust: 100%;
    /* 2 */
    /* by kevin powel */
}

/* Set core body defaults */
body {
    /* min-height: 100vh; */
    text-rendering: optimizeSpeed;
    line-height: 1.3;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
    text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture,
svg {
    max-width: 100%;
    display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
    font: inherit;
    font-size: 100%;
    /* 1 */
    margin: 0;
    /* 2 */
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
    html:focus-within {
        scroll-behavior: auto;
    }

    *,
    *::before,
    *::after {
        animation-duration: 0.01ms !important;
        animation-iteration-count: 1 !important;
        transition-duration: 0.01ms !important;
        scroll-behavior: auto !important;
    }
}

/* RESET END */


/* ===== GENERAL ===== */
html {
    scroll-behavior: smooth;
    scroll-padding: var(--scroll-padding, 3rem);
}

/* this is to take off the underline on the button */
a {
    text-decoration: none;
}

body {
    font-family: var(--ff-sec-body);
}

.container {
    max-width: 1200px;
    margin: 0 auto;
    padding-inline: 15px;
}

h1, h2 {
    color: var(--clr-black-header);
}

h1 {
    letter-spacing: .5px;
}

p {
    font-family: var(--ff-sec-body);
    font-size: var(--fs-m-body);
    color: var(--clr-black-body);
}

.title {
    font-size: var(--fs-m-title);
    font-family: var(--ff-tertiary-subhead);
    font-weight: 700;
}

.nav-item {
    font-size: 1rem;
    font-weight: 600;
    font-family: var(--ff-tertiary-subhead);
}

.header {
    font-size: var(--fs-m-hero-header);
    font-family: var(--ff-pry-header);
}

.body-header {
    font-size: var(--fs-m-bd-header);
    font-family: var(--ff-pry-header);
    line-height: 1.1;
}

.subheader {
    font-size: 22px;
    font-family: var(--ff-tertiary-subhead);
    font-weight: 700;
}

.header-group {
    margin-bottom: .7rem;
}

.green-text {
    color: var(--clr-pry-green);
}

.orange-text {
    color: var(--clr-sec-orange);
}

button {
    background-color: var(--clr-pry-green);
    color: var(--clr-white);
    padding: .7rem 1.3rem;
    font-weight: 600;
    font-size: 1rem;
    width: 150px;
    border: 2px solid var(--clr-pry-green);
    border-radius: 50vw;
    cursor: pointer;
    transition: all 100ms ease-in-out;
}

button:hover {
    background-color: #03C0A8;
    border: 2px solid #03C0A8;
}

@media (min-width: 992px) {
    .title {
        font-size: var(--fs-title);
    }

    .header {
        font-size: var(--fs-hero-header);
    }

    .body-header {
        font-size: var(--fs-bd-header);
    }

    .subheader {
        font-size: var(--fs-subheader);
    }
}
/* GENERAL END */

/*====== NAVBAR ====== */
header {
    position: fixed;
    width: 100%;
    background-color: var(--clr-black-body);
    z-index: 10;
}

.navbar {
    display: flex;
    justify-content: space-between;
    /* width: 100%; */
}

.navbar .navbar-brand {
    width: 110px;
    height: auto;
    padding-block: .5rem;
}

.navbar-toggler {
    width: 30px;
    /* transition: 500px; */
}

/* Mobile view */
#navbarNav {
    transition: 200ms;
    backdrop-filter: blur(10px);
}

.collapse {
    opacity: 0;
    transform: translateY(-7px);
}

.expand {
    opacity: 1;
    transform: translateY(0px);
}

.navbar-collapse {
    position: fixed;
    margin-top: var(--scroll-padding, 3.6rem);
    background: var(--clr-black-header);
    width: 100%;
    left: 0;
    /* z-index: -11; */
}

.navbar-collapse .nav-item {
    position: relative;
    padding: .8rem;
    border-bottom: 1px solid #A8A8A8;
    list-style: none;
    color: white;
}

.navbar-collapse .nav-item:has(.active)::before {
    content: '';
    position: absolute;
    width: 7px;
    height: 100%;
    background-color: var(--clr-white);
    left: -1px;
    top: 0;
}

.nav-item a {
    display: block;
    padding: .5rem;
    color: var(--clr-white);
}

/* Navbar mobile contact group */
.nav-contact-group {
    padding: 1.2rem;
}

.nav-contact-info .title {
    color: var(--clr-white);
    margin-block: .6rem;
}

.nav-contact-info a {
    color: var(--clr-white);
}

.nav-contact-info p {
    margin-top: 5px;
}

.nav-socials {
    padding-block: 2.2rem;
}

.nav-socials ul {
    display: flex;
    justify-content: center;
    list-style: none;
    gap: 1.3rem;
}
/* ... */

